fix(plugins/plugin-carbon-tables): Pagination border-top color theme alignment
Fixes #3879

--- a/plugins/plugin-carbon-tables/web/css/static/pagination.scss
+++ b/plugins/plugin-carbon-tables/web/css/static/pagination.scss
@@ -3,6 +3,7 @@ body[kui-theme-style] .bx--pagination {
   height: 2.375em;
   font-size: 0.875em;
   line-height: 1.125em;
+  border-top-color: var(--color-table-border3);
 
   span.bx--pagination__text {
     margin-left: 1em;
